<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detailName"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/myStyle"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="#000BE8"
        android:text="@string/name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/detailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        style="@style/myStyle"/>

    <TextView
        android:id="@+id/detailColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textStyle="bold"
        style="@style/myStyle" />

    <TextView
        android:id="@+id/detailDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textStyle="bold"
        style="@style/myStyle"/>

    <TextView
        android:id="@+id/descDetail"
        style="@style/myStyle"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/desc" />

</LinearLayout>